Version 1.1.0

  Features:

  - feat: notes-and-source sync
          Previously, Org-remark was designed to create/update/delete
          highlights from the source buffer to its marginal notes
          buffer; this was always one-way from the source to the notes.

          Now we have implemented the updating process in the other
          direction from the notes to source.

          Functionally, we currently have echo-text/tooltip containing
          an excerpt from the body of notes from the notes buffer
          (thanks to @mooseyboots).

          Other than this additional feature, there should be no visible
          change for end users.  The update should all happen
          transparently behind the scenes with no to little change for
          end users of Org-remark.

  - feat: echo-text update from the marginal notes to the source buffer
          This is a code contribution by marty hiatt (@mooseyboots).  He
          has done FSF copyright assignment in July, 2022.

          Now the source buffer can Display annotation text as help-echo
          or tooltip. Thank you, @mooseyboots.

          This has opened up an avenue to implement "notes sync" feature
          which updates select elements of marginal notes buffer back
          into the source buffer for highlight overlays.

  - feat: Extend support for non-file-visiting buffer
          We now have an approach to extend Org-remark to support
          non-file-visiting buffers of various modes.  Currently it is
          assumed that the support is to be implemented per mode
          basis. We have support for EWW with 'org-remark-eww-mode' and
          its dedicated file and feature 'org-remark-eww'. Refer to its
          implementation as a reference as to how this approach is
          currently practiced.

  - feat: Global minor mode org-remark-eww-mode
          Support taking annotations in eww buffers for websites A new